--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ dirs = "6.0.0"
 fluent-bundle = "0.16.0"
 fluent-syntax = "0.12.0"
 iced = { version = "0.12", features = ["tokio", "svg", "image"] }
-image = "0.25.9"
+image_rs = { package = "image", version = "0.24", features = ["jpeg", "png", "gif", "tiff", "webp", "bmp", "ico"] }
 pico-args = "0.5.0"
 resvg = "0.45.1"
 rust-embed = "8.9.0"
@@ -17,3 +17,11 @@ sys-locale = "0.3.2"
 tiny-skia = "0.11.4"
 toml = "0.9.8"
 unic-langid = "0.9.6"
+
+[dev-dependencies]
+criterion = { version = "0.7.0", features = ["html_reports"] }
+tempfile = "3.23.0"
+
+[[bench]]
+name = "image_loading"
+harness = false # Let Criterion manage the main function
