--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ sys-locale = "0.3.2"
 tiny-skia = "0.11.4"
 toml = "0.9.8"
 unic-langid = "0.9.6"
+iced_core = "0.12"
+iced_widget = "0.12"
 
 [dev-dependencies]
 criterion = { version = "0.7.0", features = ["html_reports"] }
