--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 dirs = "6.0.0"
 fluent-bundle = "0.16.0"
 fluent-syntax = "0.12.0"
-iced = { version = "0.13.1", features = ["tokio", "svg", "image"] }
+iced = { version = "0.13.1", features = ["tokio", "svg", "image", "advanced"] }
 image_rs = { package = "image", version = "0.24", features = ["jpeg", "png", "gif", "tiff", "webp", "bmp", "ico"] }
 pico-args = "0.5.0"
 resvg = "0.45.1"
