--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ iced = { version = "0.13.1", features = ["tokio", "svg", "image", "advanced", "c
 image_rs = { package = "image", version = "0.24", features = ["jpeg", "png", "gif", "tiff", "webp", "bmp", "ico"] }
 pico-args = "0.5.0"
 resvg = "0.45.1"
+rfd = "0.15"
 rust-embed = "8.9.0"
 serde = { version = "1.0.228", features = ["derive"] }
 sys-locale = "0.3.2"
