feat: Consolidate project updates and new features
This commit consolidates multiple recent changes, including feature additions to the TODO list and updates to the .gitignore file.

- **Build & Config:**
  - Add  and  to .gitignore.

- **Core Features:**
  - Plan support for directory paths as a command-line argument.

- **UI/UX Improvements:**
  - Plan dynamic window titles (metadata/filename, with '*' for unsaved state).
  - Plan an "empty state" view with drag-and-drop and open button.
  - Plan a dedicated collapse control for the metadata sidebar.
  - Plan to disable irrelevant UI controls when no media is loaded.

- **Planned Modifications:**
  - Plan automatic sidebar collapse on fullscreen.
  - Plan migration from SVG to PNG icons with an improved loading strategy.

- **Bug Fixes:**
  - Add a bug to the list regarding frame navigation/capture issues from video preview.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ CLAUDE.md
 # Added by cargo
 /target
 
+# Python
+/venv/
+
 # External documentation
 .ext_doc/
 
@@ -40,3 +43,4 @@ tests/data/*.avi
 tests/data/*.webm
 tests/data/*.mov
 tests/data/*.mkv
+tests/samples/
